# claude-voxstral-test

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: roundtrip_test.py  stt_test.py  tts_test.py
tests/: test_pipeline.py
