[project]
name = "claude-voxstral-test"
version = "0.1.0"
description = "Tests TTS et STT avec Voxtral (Mistral) sur Apple Silicon M1 Pro"
requires-python = ">=3.10"
dependencies = [
    "mlx-audio",
    "mlx-voxtral",
    "soundfile",
    "numpy",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
